--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -46,10 +46,14 @@
             <div>
                 <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
                     <li>
-                        <a href="./about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
+                        <a href="./about.html"
+                            class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+                            data-page="hello">About</a>
                     </li>
                     <li>
-                        <a href="../index.html" class="text-[#F36F64]" data-page="index">Case studies</a>
+                        <a href="../index.html"
+                            class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+                            data-page="index">Case studies</a>
                     </li>
                 </ul>
             </div>
@@ -84,12 +88,12 @@
                         comprehensive information about upcoming tours, past experiences, club news, and resources for
                         hiking enthusiasts.</p>
                     <a class="text-[#F36F64] underline" href="https://dipsakus.mk/">https://dipsakus.mk/</a>
-                    <picture>
+                    <picture class="fullscreen-container">
                         <source srcset="../assets/img/dipsakus/unsplash_1.jpg 800w,
                                              ../assets/img/dipsakus/unsplash_1.jpg 480w,
                                              ../assets/img/dipsakus/unsplash_1.jpg 320w"
                             sizes="(max-width: 800px) 100vw, 800px">
-                        <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover"
+                        <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover cursor-zoom-in"
                             src="../assets/img/dipsakus/unsplash_1.jpg" alt="Dipsakus">
                     </picture>
                 </div>
@@ -150,12 +154,13 @@
                         The interviews helped us understand what motivates users to join a hiking club, their
                         preferences for tour destinations and difficulty levels, and their expectations from the club's
                         website.</p>
-                    <picture>
+                    <picture class="fullscreen-container">
                         <source srcset="../assets/img/dipsakus/questions.jpg 800w,
                                              ../assets/img/dipsakus/questions.jpg 480w,
                                              ../assets/img/dipsakus/questions.jpg 320w"
                             sizes="(max-width: 800px) 100vw, 800px">
-                        <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/questions.jpg" alt="Questions">
+                        <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/questions.jpg"
+                            alt="Questions">
                     </picture>
 
                 </div>
@@ -192,13 +197,13 @@
                                 acquisition,
                                 and
                                 service.</p>
-                            <picture class="flex justify-center">
+                            <picture class="flex justify-center fullscreen-container">
                                 <source srcset="../assets/img/dipsakus/journey-map.jpg 800w,
                                                          ../assets/img/dipsakus/journey-map.jpg 480w,
                                                          ../assets/img/dipsakus/journey-map.jpg 320w"
                                     sizes="(max-width: 800px) 100vw, 800px">
-                                <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/journey-map.jpg"
-                                    alt="Journey map">
+                                <img class="mt-10 h-full w-full cursor-zoom-in"
+                                    src="../assets/img/dipsakus/journey-map.jpg" alt="Journey map">
                             </picture>
                         </div>
                     </div>
@@ -215,12 +220,13 @@
                             from
                             their initial interaction with the website to the completion of specific tasks or actions.
                         </p>
-                        <picture class="flex justify-center">
+                        <picture class="flex justify-center fullscreen-container">
                             <source srcset="../assets/img/dipsakus/user-flow.jpg 800w,
                                                      ../assets/img/dipsakus/user-flow.jpg 480w,
                                                      ../assets/img/dipsakus/user-flow.jpg 320w"
                                 sizes="(max-width: 800px) 100vw, 800px">
-                            <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/user-flow.jpg" alt="User flow">
+                            <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/user-flow.jpg"
+                                alt="User flow">
                         </picture>
                     </div>
                 </div>
@@ -232,12 +238,13 @@
                     exploring various
                     layouts and features. This process helps me visualize the website's structure and functionality
                     before moving on to digital wireframes and prototypes.</p>
-                <picture class="flex justify-center">
+                <picture class="flex justify-center fullscreen-container">
                     <source srcset="../assets/img/dipsakus/sketches.jpg 800w,
                                                  ../assets/img/dipsakus/sketches.jpg 480w,
                                                  ../assets/img/dipsakus/sketches.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/sketches.jpg" alt="Sketches">
+                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/sketches.jpg"
+                        alt="Sketches">
                 </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -257,20 +264,22 @@
                     <li>What would they like to improve?</li>
                     <li>Does the overall design/flow meet their needs?</li>
                 </ul>
-                <picture class="flex justify-center">
+                <picture class="flex justify-center fullscreen-container">
                     <source srcset="../assets/img/dipsakus/wireframes-1.jpg 800w,
                                                  ../assets/img/dipsakus/wireframes-1.jpg 480w,
                                                  ../assets/img/dipsakus/wireframes-1.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/wireframes-1.jpg" alt="Wireframes">
+                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/wireframes-1.jpg"
+                        alt="Wireframes">
                 </picture>
 
-                <picture class="flex justify-center">
+                <picture class="flex justify-center fullscreen-container">
                     <source srcset="../assets/img/dipsakus/wireframes-2.jpg 800w,
                                                  ../assets/img/dipsakus/wireframes-2.jpg 480w,
                                                  ../assets/img/dipsakus/wireframes-2.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full" src="../assets/img/dipsakus/wireframes-2.jpg" alt="Wireframes">
+                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/wireframes-2.jpg"
+                        alt="Wireframes">
                 </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -284,35 +293,35 @@
                     meticulous attention to detail and adherence to responsive design principles, I aimed to provide
                     users with a cohesive and engaging experience across all devices.</p>
                 <!-- First image -->
-                <picture>
+                <picture class="fullscreen-container">
                     <source srcset="../assets/img/dipsakus/final-1.jpg 800w,
                      ../assets/img/dipsakus/final-1.jpg 480w,
                      ../assets/img/dipsakus/final-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10" src="../assets/img/dipsakus/final-1.jpg" alt="Final image">
+                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-1.jpg" alt="Final image">
                 </picture>
 
                 <!-- Second image -->
-                <picture>
+                <picture class="fullscreen-container">
                     <source srcset="../assets/img/dipsakus/final-2.jpg 800w,
                      ../assets/img/dipsakus/final-2.jpg 480w,
                      ../assets/img/dipsakus/final-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10" src="../assets/img/dipsakus/final-2.jpg" alt="Final image">
+                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-2.jpg" alt="Final image">
                 </picture>
 
                 <!-- Third image -->
-                <picture>
+                <picture class="fullscreen-container">
                     <source srcset="../assets/img/dipsakus/final-3.jpg 800w,
                      ../assets/img/dipsakus/final-3.jpg 480w,
                      ../assets/img/dipsakus/final-3.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10" src="../assets/img/dipsakus/final-3.jpg" alt="Final image">
+                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-3.jpg" alt="Final image">
                 </picture>
 
                 <!-- Fourth image -->
-                <picture>
+                <picture class="fullscreen-container">
                     <source srcset="../assets/img/dipsakus/final-4.jpg 800w,
                      ../assets/img/dipsakus/final-4.jpg 480w,
                      ../assets/img/dipsakus/final-4.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10" src="../assets/img/dipsakus/final-4.jpg" alt="Final image">
+                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-4.jpg" alt="Final image">
                 </picture>
                 <p class="mt-10 text-slate-600">I translated UX design concepts and wireframes into functional
                     components using Next.js and Tailwind CSS. Leveraging my frontend development skills, I implemented
@@ -325,13 +334,18 @@
                     functionality. Together, we worked as a team to bring the Dipsakus Hiking Club website to life,
                     combining UX design principles with robust frontend development techniques to deliver a seamless
                     digital experience for users.</p>
-                <picture>
+                <picture class="fullscreen-container">
                     <source srcset="../assets/img/dipsakus/code.jpg 800w,
                          ../assets/img/dipsakus/code.jpg 480w,
                          ../assets/img/dipsakus/code.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10" src="../assets/img/dipsakus/code.jpg" alt="Final image">
+                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/code.jpg" alt="Final image">
                 </picture>
-
+                <ul class="flex gap-3 text-[#F36F64] mt-10 flex-wrap">
+                    <li class="underline">Figma</li>
+                    <li class="underline">Tailwind CSS</li>
+                    <li class="underline">JavaScript</li>
+                    <li class="underline">Next.js</li>
+                </ul>
             </div>
         </section>
     </section>
@@ -351,7 +365,7 @@
             <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
                 <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
-                    <ul class="flex gap-8 text-slate-800">
+                    <ul class="flex gap-6 text-slate-800">
                         <li
                             class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
                             <div class="flex items-center gap-3">
@@ -376,6 +390,16 @@
                                 <span class="hover:animate-bounce">
                                     <a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
                                             class='bx bxl-github'></i></a>
+                                </span>
+                            </div>
+                        </li>
+                        <li
+                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                            <div class="flex items-center gap-3">
+                                <span class="hover:animate-bounce">
+                                    <a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+                                        <i class='bx bx-envelope'></i>
+                                    </a>
                                 </span>
                             </div>
                         </li>
