--- a/pages/project-3.html
+++ b/pages/project-3.html
@@ -40,7 +40,6 @@
 
 <body class="font-lato text-base md:text-xl">
 	<!-- Navbar -->
-	<!-- Navbar -->
 	<nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
 		<div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
 			<a href="../index.html">
@@ -49,10 +48,14 @@
 			<div>
 				<ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
 					<li>
-						<a href="./about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
+						<a href="./about.html"
+							class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+							data-page="hello">About</a>
 					</li>
 					<li>
-						<a href="../index.html" class="text-[#F36F64]" data-page="index">Case studies</a>
+						<a href="../index.html"
+							class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+							data-page="index">Case studies</a>
 					</li>
 				</ul>
 			</div>
@@ -98,11 +101,11 @@
 
 						</p>
 					</div>
-					<picture>
+					<picture class="fullscreen-container">
 						<source srcset="../assets/img/cinevers/cinevers.jpg 800w,
 						../assets/img/cinevers/cinevers.jpg 480w,
 						../assets/img/cinevers/cinevers.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full md:h-full w-full object-cover"
+						<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
 							src="../assets/img/cinevers/cinevers.jpg" alt="Final image">
 					</picture>
 				</div>
@@ -140,7 +143,6 @@
 		</div>
 
 		<!-- Design process -->
-
 		<section>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
 				<div class="text-slate-600">
@@ -154,11 +156,11 @@
 							audience. Methods included user interviews, surveys, and competitive analysis. Key findings
 							informed the design decisions and ensured alignment with user expectations.</p>
 					</div>
-					<picture>
+					<picture class="fullscreen-container">
 						<source srcset="../assets/img/cinevers/analyze-1.jpg 800w,
 						../assets/img/cinevers/analyze-1.jpg 480w,
 						../assets/img/cinevers/analyze-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full md:h-full w-full object-cover"
+						<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
 							src="../assets/img/cinevers/analyze-1.jpg" alt="Final image">
 					</picture>
 				</div>
@@ -170,11 +172,11 @@
 							represented diverse segments of the target audience, including their demographics, goals,
 							pain points, and behaviors. These personas served as a guiding framework throughout the
 							design process to create user-centric solutions.</p>
-						<picture>
+						<picture class="fullscreen-container">
 							<source srcset="../assets/img/cinevers/user-personas.jpg 800w,
 								../assets/img/cinevers/user-personas.jpg 480w,
 								../assets/img/cinevers/user-personas.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-							<img class="mt-10 h-full md:h-full w-full object-cover"
+							<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
 								src="../assets/img/cinevers/user-personas.jpg" alt="Final image">
 						</picture>
 					</div>
@@ -187,12 +189,12 @@
 					experience within the app. User flows were designed to ensure intuitive and seamless interactions,
 					guiding users towards their goals efficiently. Iterative refinement of user flows improved usability
 					and streamlined the user journey.</p>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/user-flow.jpg 800w,
 							../assets/img/cinevers/user-flow.jpg 480w,
 							../assets/img/cinevers/user-flow.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/cinevers/user-flow.jpg"
-						alt="Final image">
+					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/user-flow.jpg" alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -202,12 +204,12 @@
 					various concepts and ideas. Low-fidelity sketches were used to visualize layout structures and
 					iterate rapidly on design concepts. This phase allowed for creative exploration and alignment on
 					design direction before moving to higher fidelity mockups.</p>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/sketches.jpg 800w,
 								../assets/img/cinevers/sketches.jpg 480w,
 								../assets/img/cinevers/sketches.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/cinevers/sketches.jpg"
-						alt="Final image">
+					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/sketches.jpg" alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -217,18 +219,18 @@
 					thinking. The technique intends for participants to come up with eccentric ideas. Some of these
 					thoughts and ideas are crafted into original and creative solutions to problems, whereas helping to
 					spark additional ideas.</p>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/brainstorming.jpg 480w,
 										../assets/img/cinevers/brainstorming.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 w-full h-full object-cover" src="../assets/img/cinevers/brainstorming.jpg"
-						alt="Final image">
+					<img class="mt-10 w-full h-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/brainstorming.jpg" alt="Final image">
 				</picture>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/search-1.jpg 800w,
 									../assets/img/cinevers/search-1.jpg 480w,
 									../assets/img/cinevers/search-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/cinevers/search-1.jpg"
-						alt="Final image">
+					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/search-1.jpg" alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -250,19 +252,19 @@
 						enhance engagement.
 					</p>
 				</div>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/screen-1.jpg 800w,
 									../assets/img/cinevers/screen-1.jpg 480w,
 									../assets/img/cinevers/screen-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/cinevers/screen-1.jpg"
-						alt="Final image">
+					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/screen-1.jpg" alt="Final image">
 				</picture>
-				<picture>
+				<picture class="fullscreen-container">
 					<source srcset="../assets/img/cinevers/screen-2.jpg 800w,
 									../assets/img/cinevers/screen-2.jpg 480w,
 									../assets/img/cinevers/screen-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/cinevers/screen-2.jpg"
-						alt="Final image">
+					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						src="../assets/img/cinevers/screen-2.jpg" alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -297,6 +299,12 @@
 							href="https://github.com/marijapopeska/Cinevers_react_app.git">Cinevers-Github
 							repository</a>
 					</div>
+					<ul class="flex gap-3 text-[#F36F64] mt-10 flex-wrap">
+						<li class="underline">Figma</li>
+						<li class="underline">Tailwind CSS</li>
+						<li class="underline">JavaScript</li>
+						<li class="underline">React</li>
+					</ul>
 				</div>
 			</div>
 		</section>
@@ -317,7 +325,7 @@
 			<hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
 			<div class="sm:flex sm:items-center sm:justify-between align-middle">
 				<div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
-					<ul class="flex gap-8 text-slate-800">
+					<ul class="flex gap-6 text-slate-800">
 						<li
 							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
 							<div class="flex items-center gap-3">
@@ -342,6 +350,16 @@
 								<span class="hover:animate-bounce">
 									<a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
 											class='bx bxl-github'></i></a>
+								</span>
+							</div>
+						</li>
+						<li
+							class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+							<div class="flex items-center gap-3">
+								<span class="hover:animate-bounce">
+									<a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+										<i class='bx bx-envelope'></i>
+									</a>
 								</span>
 							</div>
 						</li>
