--- a/pages/about.html
+++ b/pages/about.html
@@ -45,16 +45,18 @@
             <a href="../index.html">
                 <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
             </a>
-            <div>
-                <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
-                    <li>
-                        <a href="./pages/about.html" class="text-[#F36F64]" data-page="hello">Hello</a>
-                    </li>
-                    <li>
-                        <a href="../index.html" class="text-[#F36F64]" data-page="index">Case studies</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="text-[18px] md:text-[20px] flex flex-col md:flex-row md:gap-6">
+                <li>
+                    <a href="./about.html"
+                        class="text-[#F36F64] relative text-md w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-[#F36F64] after:w-full after:origin-center"
+                        data-page="index">About</a>
+                </li>
+                <li>
+                    <a href="../index.html"
+                        class="text-[#F36F64] relative text-md md:w-fit md:block md:after:block md:after:content-[''] md:after:absolute md:after:h-[2px] md:after:bg-[#F36F64] md:after:w-full md:after:scale-x-0 md:after:hover:scale-x-100 md:after:transition md:after:duration-300 md:after:origin-center"
+                        data-page="index">Case studies</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -122,7 +124,7 @@
                                 <div class="flex items-center gap-3">
                                     <span>
                                         <a href="https://www.linkedin.com/in/marija-p-b23912167/"
-                                            class="home__social-icon text-3xl text-slate-600 hover:text-[#F36F64]"
+                                            class="home__social-icon text-2xl text-slate-600 hover:text-[#F36F64]"
                                             title="LinkedIn"><i class='bx bxl-linkedin'></i></a>
                                     </span>
                                 </div>
@@ -131,7 +133,7 @@
                                 <div class="flex items-center gap-3">
                                     <span>
                                         <a href="https://dribbble.com/marijapopeska"
-                                            class="home__social-icon text-3xl text-slate-600 hover:text-[#F36F64]"
+                                            class="home__social-icon text-2xl text-slate-600 hover:text-[#F36F64]"
                                             title="Dribbble"><i class='bx bxl-dribbble'></i></a>
                                     </span>
                                 </div>
@@ -140,8 +142,18 @@
                                 <div class="flex items-center gap-3">
                                     <span>
                                         <a href="https://github.com/marijapopeska"
-                                            class="home__social-icon text-3xl text-slate-600 hover:text-[#F36F64]"
+                                            class="home__social-icon text-2xl text-slate-600 hover:text-[#F36F64]"
                                             title="GitHub"><i class='bx bxl-github'></i></a>
+                                    </span>
+                                </div>
+                            </li>
+                            <li class="py-4 px-4 opacity-70 hover:opacity-100 transition-all ease-in-out duration-300">
+                                <div class="flex items-center gap-3">
+                                    <span>
+                                        <a href="mailto:marija.popeska@gmail.com"
+                                            class="home__social-icon text-2xl text-slate-600 hover:text-[#F36F64]">
+                                            <i class='bx bx-envelope'></i>
+                                        </a>
                                     </span>
                                 </div>
                             </li>
@@ -167,7 +179,7 @@
             <hr class="my-3 border-gray-300 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
                 <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
-                    <ul class="flex gap-8 text-slate-800">
+                    <ul class="flex gap-6 text-slate-800">
                         <li
                             class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
                             <div class="flex items-center gap-3">
@@ -192,6 +204,16 @@
                                 <span class="hover:animate-bounce">
                                     <a href="https://github.com/marijapopeska" class="home__social-icon text-2xl "><i
                                             class='bx bxl-github'></i></a>
+                                </span>
+                            </div>
+                        </li>
+                        <li
+                            class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
+                            <div class="flex items-center gap-3">
+                                <span class="hover:animate-bounce">
+                                    <a href="mailto:marija.popeska@gmail.com" class="home__social-icon text-2xl">
+                                        <i class='bx bx-envelope'></i>
+                                    </a>
                                 </span>
                             </div>
                         </li>
