--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
 	<meta name="google" content="nositelinkssearchbox">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="rating" content="adult">
-	<meta property="og:image" content="./assets/img/collection/img-1.jpg">
+
+	<!-- Open Graph meta tags -->
+	<meta name="type" property="og:type" content="website">
+	<meta name="image" property="og:image" content="https://www.marijapopeska.com/assets/img/collection/img-1.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="627">
-	<meta property="og:url" content="https://www.marijapopeska.com">
-	<meta property="og:title" content="Marija Popeska">
-	<meta property="og:description"
+	<meta name="url" property="og:url" content="https://www.marijapopeska.com">
+	<meta name="title" property="og:title" content="Marija Popeska">
+	<meta name="description" property="og:description"
 		content="This is Marija's portfolio highlighting her dedicated work in UX design and frontend development.">
+
+	<!-- Additional meta tags for LinkedIn -->
+	<meta name="title" content="Marija Popeska">
+	<meta name="image" content="https://www.marijapopeska.com/assets/img/collection/img-1.jpg">
+	<meta name="title" property="og:title" content="Marija Popeska">
+	<meta property="og:type" content="website">
+	<meta name="image" property="og:image" content="https://www.marijapopeska.com/assets/img/collection/img-1.jpg">
+	<meta name="description" property="og:description"
+		content="This is Marija's portfolio highlighting her dedicated work in UX design and frontend development.">
+	<meta name="author" content="Marija Popeska">
+
 	<title>Marija Popeska</title>
 
 	<!-- =====BOX ICONS===== -->
